[package]
name = "deepseek_agents"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "fs", "time", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.99"
thiserror = "2.0.14"
dotenv = "0.15"
clap = { version = "4.5.44", features = ["derive"] }
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
deepseek-api = { version = "0.1.1", optional = true }

[dev-dependencies]
wiremock = "0.6"

[features]
# Opt-in migration to external deepseek-api crate. When enabled, our DeepSeekClient
# will delegate to the external client for the default production base URL, while
# preserving the internal HTTP implementation for custom base URLs (e.g., tests).
deepseek_api = ["dep:deepseek-api"]
